--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required (VERSION 2.6)
-project (euler)
-#add_executable(run main.cpp)
+project (bag_of_holding)
 add_subdirectory(programs)
 add_subdirectory(library)
 add_subdirectory(test)
