--- a/programs/CMakeLists.txt
+++ b/programs/CMakeLists.txt
@@ -1,5 +1,5 @@
 #cmake_minimum_required (VERSION 2.6)
-#project (euler)
+#project (bag_of_holding)
 add_executable(run_10 problem10_summation_of_primes.cpp)
 target_link_libraries(run_10 prime_lib)
 
